--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <style>
         @font-face {
             font-family: 'Qanelas Soft';
-            src: url('./qanelas-soft-semi-bold.woff2') format('woff2');
+            src: url('fonts/qanelas-soft-semi-bold.woff2') format('woff2');
             font-weight: 600;
             font-style: normal;
             font-display: swap;
