--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                         url('https://images.unsplash.com/photo-1540555700478-4be289fbecef?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&h=1080') center/cover;
             color: white;
             text-align: center;
+            opacity:0.5;
         }
 
         .hero-content {
